fix: article not being centered on tablets

--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -474,11 +474,6 @@ footer li {
   display: none;
 }
 
-@media (min-width: 700px) and (max-width: 1024px) {
-  article {
-    padding: 0 64px;
-  }
-}
 @media (max-width: 700px) {
   .hljs {
     padding: 0 16px;
